the webkit-backface-visibility error was fixed

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -16,7 +16,7 @@ body {
     min-height: 100%;
     font-size: 1.6rem; //16px
     font-family: roboto_regular, arial, sans-serif;
-    -webkit-backface-visibility: hidden;
+    // -webkit-backface-visibility: hidden;
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
